- Fixed bug #33899 (CLI: setting extension_dir=some/path extension=foobar.so does not work)